--- a/changedetection/docker-compose.yml
+++ b/changedetection/docker-compose.yml
@@ -6,14 +6,9 @@ services:
     volumes:
       - ./data:/datastore
     restart: unless-stopped
-    environment:
-      # Respect proxy_pass type settings, `proxy_set_header Host "localhost";` and `proxy_set_header X-Forwarded-Prefix /app;`
-      - USE_X_SETTINGS=1
     labels:
       - 'traefik.enable=true'
-      - 'traefik.http.routers.changedetection.rule=PathPrefix(`/changedetection{regex:$$|/.*}`)'
-      - 'traefik.http.middlewares.changedetection-strip.stripprefix.prefixes=/changedetection'
-      - 'traefik.http.routers.changedetection.middlewares=changedetection-strip'
+      - 'traefik.http.routers.changedetection.rule=Host(`changedetection.docker.local`)'
       - 'traefik.http.services.changedetection.loadbalancer.server.port=5000'
     networks:
       - proxy
