--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -11,7 +11,11 @@ services:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
       - './traefik.toml:/traefik.toml'
     networks:
-      - proxy
+      proxy:
+        ipv4_address: 172.20.0.5
 networks:
   proxy:
-    external: true
+    name: proxy
+    ipam:
+      config:
+        - subnet: 172.20.0.0/24
