--- a/traefik/docker-compose.yml
+++ b/traefik/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     restart: 'unless-stopped'
     ports:
       - '80:80'
-      - '8080:8080'
+    labels:
+      - 'traefik.enable=true'
+      - 'traefik.http.routers.traefik.rule=Host(`traefik.docker.local`)'
+      - 'traefik.http.services.traefik.loadbalancer.server.port=8080'
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock:ro'
       - './traefik.toml:/traefik.toml'
